# BGG-ShelfHeat

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  batch_all.py  pyproject.toml  requirements.txt  test-collection.csv  test_db.py  test_full.py  test_run.py
output_eval/: 13b17c3b-2de1-4d1c-aaa5-58d1effa3e3f_results.json
scripts/: export-collection-csv.py
shelfheat/: __init__.py  __main__.py  bggdb.py  cli.py  detect.py  heatmap.py  identify.py  image_cache.py  match.py  segment.py
tests/: test_cli_smoke.py  test_heatmap_core.py  test_match_csv.py
viewer/: index.html
