[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shelfheat"
version = "0.1.0"
description = "Board game shelf photo → play-recency heatmap using BGG data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["boardgamegeek", "board games", "computer vision", "heatmap"]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.44.0",
    "Pillow>=10.0.0",
    "easyocr>=1.7.0",
    "open-clip-torch>=2.24.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
shelfheat = "shelfheat.cli:main"

[tool.setuptools.packages.find]
include = ["shelfheat*"]
